src/test/deca/context/invalid/homeMade/tests/test02_affectation_type1.deca
// test invalide de la règle 0.2

{
    toto x;
}